--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,8 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     	<uses-library android:name="com.google.android.maps"/>
-    	  <activity android:name="pl.itiner.map.GraveMap"
-                  android:label="@string/app_name"></activity>
+    	  <activity android:name="pl.itiner.map.GraveMap"/>
+                 
         <activity android:name=".GForm"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.Black.NoTitleBar">
