--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,14 +6,15 @@
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar" android:label="@string/app_name">
     	<uses-library android:name="com.google.android.maps"/>
-    	  <activity android:name="pl.itiner.map.GraveMap"/>
+    	  <activity android:name="pl.itiner.map.GraveMap" />
                  
         <activity android:name=".GForm"
                   android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Black.NoTitleBar">
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
