--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AboutView"
+	 		android:configChanges="orientation|keyboardHidden" android:label="O programie"
+			android:theme="@android:style/Theme.Dialog">
+		</activity>
         <activity 
         android:name=".ResultList"
          android:label="@string/app_name"
