--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar"
+    android:label="@string/app_name">
     	<uses-library android:name="com.google.android.maps"/>
     	  <activity android:name="pl.itiner.map.GraveMap" />
                  
