--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity 
         android:name=".ResultList"
          android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Black.NoTitleBar"></activity>
+                  android:theme="@android:style/Theme.Light.NoTitleBar"></activity>
   
 
     </application>
