--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,10 @@
         android:name=".ResultList"
          android:label="@string/app_name"
                   android:theme="@android:style/Theme.Light.NoTitleBar"></activity>
+          <activity 
+        android:name="pl.itiner.nutiteq.HelloNutiteq"
+         android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Light.NoTitleBar"></activity>
   
 
     </application>
