--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,39 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="pl.itiner.grave"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    package="pl.itiner.grave"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar"
-    android:label="@string/app_name">
-    	<uses-library android:name="com.google.android.maps"/>
-    	  <activity android:name="pl.itiner.map.GraveMap" />
-                 
-        <activity android:name=".GForm"
-                  android:label="@string/app_name"
-                  >
-            <intent-filter>
+    <uses-sdk android:minSdkVersion="7" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Light.NoTitleBar" >
+        <uses-library android:name="com.google.android.maps" />
+
+        <activity android:name="pl.itiner.map.GraveMap" />
+        <activity
+            android:label="@string/app_name"
+            android:name=".GForm" >
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AboutView"
-	 		android:configChanges="orientation|keyboardHidden" android:label="@string/app_name" android:icon="@drawable/icon"
-			android:theme="@android:style/Theme.Dialog">
-		</activity>
-        <activity 
-        android:name=".ResultList"
-         android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Light.NoTitleBar"></activity>
-          <activity 
-        android:name="pl.itiner.nutiteq.HelloNutiteq"
-         android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Light.NoTitleBar"></activity>
-  
-
+        <activity
+            android:configChanges="orientation|keyboardHidden"
+            android:icon="@drawable/icon"
+            android:label="@string/app_name"
+            android:name=".AboutView"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".ResultList"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name="pl.itiner.nutiteq.HelloNutiteq"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name="pl.itiner.nutiteq.NutiteqMap"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
+
 </manifest>
