--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,13 +39,22 @@
         </activity>
         <activity
             android:label="@string/app_name"
-            android:name="pl.itiner.nutiteq.HelloNutiteq"
+            android:name="pl.itiner.nutiteq.NutiteqMap"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
+            android:configChanges="orientation|keyboardHidden"
+            android:icon="@drawable/icon"
             android:label="@string/app_name"
-            android:name="pl.itiner.nutiteq.NutiteqMap"
-            android:theme="@android:style/Theme.Light.NoTitleBar" >
+            android:name=".LibrariesView"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:configChanges="orientation|keyboardHidden"
+            android:icon="@drawable/icon"
+            android:label="@string/app_name"
+            android:name=".LicenseView"
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
     </application>
 
