Json parsing refactor
--HG--
branch : custom-map

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/projector.jar"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/gson.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
