--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,14 @@
             android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
+            android:name=".GenericAbout"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        
+        <activity
+            android:configChanges="orientation|keyboardHidden"
+            android:icon="@drawable/icon"
+            android:label="@string/app_name"
             android:name=".About"
             android:theme="@android:style/Theme.Dialog" >
         </activity>
