Using fragments in layout.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity android:name="pl.itiner.map.GraveMap" />
         <activity
-            android:name=".GForm"
+            android:name=".SearchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
