--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,7 +69,7 @@
         </activity>
 
         <provider
-            android:name="pl.itiner.fetch.GraveFinderProvider"
+            android:name="pl.itiner.db.GraveFinderProvider"
             android:authorities="pl.itiner.grave.GraveFinderProvider"
             android:exported="false" >
         </provider>
