--- a/grave_finder_app/AndroidManifest.xml
+++ b/grave_finder_app/AndroidManifest.xml
@@ -14,11 +14,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:allowBackup="false"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
-        
+        android:theme="@style/Theme.Sherlock.Light" >
         <uses-library android:name="com.google.android.maps" />
 
         <activity android:name="pl.itiner.map.GraveMap" />
@@ -33,27 +32,19 @@
         </activity>
         <activity
             android:name=".GenericAbout"
-            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".About"
-            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/icon"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Dialog" >
+            android:label="@string/app_name" >
         </activity>
-        <activity
-            android:name=".ResultList"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+ 
         <activity
             android:name="pl.itiner.nutiteq.NutiteqMap"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar" >
+            android:label="@string/app_name" >
         </activity>
 
         <provider
