--- a/grave_finder_app/project.properties
+++ b/grave_finder_app/project.properties
@@ -8,4 +8,5 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:8
+target=android-17
+android.library.reference.1=../ActionBarSherlock/library
