--- a/grave_finder_app/proguard.cfg
+++ b/grave_finder_app/proguard.cfg
@@ -1,9 +1,10 @@
 -optimizationpasses 5
+-dontobfuscate
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -dontpreverify
 -verbose
--optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
+-optimizations !code/simplification/arithmetic,!field/*,!class/merging/*,!code/allocation/variable
 
 -keep public class * extends android.app.Activity
 -keep public class * extends android.app.Application
@@ -38,3 +39,11 @@
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
 }
+
+-keep public class sun.misc.Unsafe
+-dontwarn sun.misc.Unsafe
+
+-keep class android.support.v4.app.** { *; } 
+-keep interface android.support.v4.app.** { *; } 
+-keep class com.actionbarsherlock.** { *; } 
+-keep interface com.actionbarsherlock.** { *; }
