--- a/grave_finder_app/proguard.cfg
+++ b/grave_finder_app/proguard.cfg
@@ -39,10 +39,25 @@
   public static final android.os.Parcelable$Creator *;
 }
 
--keep public class sun.misc.Unsafe
--dontwarn sun.misc.Unsafe
-
 -keep class android.support.v4.app.** { *; } 
 -keep interface android.support.v4.app.** { *; } 
 -keep class com.actionbarsherlock.** { *; } 
 -keep interface com.actionbarsherlock.** { *; }
+-keepattributes *Annotation*
+
+##--GSON--##
+# Gson uses generic type information stored in a class file when working with fields. Proguard
+# removes such information by default, so configure it to keep all of it.
+-keepattributes Signature
+# Gson specific classes
+-dontwarn sun.misc.Unsafe
+-keep class sun.misc.Unsafe { *; }
+#-keep class com.google.gson.stream.** { *; }
+# Application classes that will be serialized/deserialized over Gson
+-keep class com.google.gson.examples.android.model.** { *; }
+##END OF GSON##
+
+## GRAVE FINDER MODEL CLASS ##
+-keep class pl.itiner.model.** { *; }
+-keep interface pl.itiner.model.** { *; }
+
