Simplifying proguard conf. No longer separate conf for beta and release.

--- a/grave_finder_app/proguard.cfg
+++ b/grave_finder_app/proguard.cfg
@@ -60,4 +60,6 @@
 ## GRAVE FINDER MODEL CLASS ##
 -keep class pl.itiner.model.** { *; }
 -keep interface pl.itiner.model.** { *; }
-
+## DEPLOYGATE ##
+-keep class com.deploygate.** { *; }
+-keep interface com.deploygate.** { *; }
