--- a/grave_finder_app/AndroidManifest.xml
+++ b/grave_finder_app/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
