Map FileCache implementation
Implementation of FileCache to save map tiles to files. Actually this implementation is just slighltly tweaked Nutiteg AndroidFileSystemCache.

The only changed method is normalizeKey(String). This method changes map tile key to file name which is saved. Tile key is url. In our case url was very long eg. http://www.poznan.pl/tilecache/tilecache.cgi?LAYERS=plan%5F2177&FORMAT=image%2Fpng&BGCOLOR=0x000000&TRANSPARENT=FALSE&SERVICE=WMS&VERSION=1.1.1&REQUEST=GetMap&STYLES=&EXCEPTIONS=application%2Fvnd%2Eogc%2Ese%5Finimage&SRS=EPSG%3A2177&BBOX=6424660.0,5807886.0,6437460.0,5820686.0&WIDTH=256&HEIGHT=256

That is why in normalizeKey only layer name and bbox is extracted from url. Which should guarantee uniqeness of filenames.

--- a/grave_finder_app/.classpath
+++ b/grave_finder_app/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/android_maps_lib-1.1.1.jar" sourcepath="libs/android_maps_lib-1.1.1.src.zip"/>
+	<classpathentry exported="true" kind="lib" path="libs/android_maps_lib-1.1.1.jar" sourcepath="/home/michal/projects/Hobby/Android/Grave/maps-lib-nutiteq"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/projector.jar"/>
