--- a/grave_finder_app/AndroidManifest.xml
+++ b/grave_finder_app/AndroidManifest.xml
@@ -5,6 +5,8 @@
     android:versionCode="9"
     android:versionName="2.2" >
 
+    <supports-screens android:largeScreens="true" android:xlargeScreens="true"/>
+    
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="17" />
@@ -20,7 +22,6 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/Theme.Sherlock.Light" >
-        <uses-library android:name="com.google.android.maps" />
 
         <activity
             android:name=".SearchActivity"
