--- a/grave_finder_app/AndroidManifest.xml
+++ b/grave_finder_app/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name="pl.itiner.nutiteq.NutiteqMap"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="pl.itiner.nutiteq.WroclawResultView"
+            android:label="@string/app_name" >
+        </activity>
 
         <provider
             android:name="pl.itiner.db.GraveFinderProvider"
